# lwprintf

./: .gitignore  AUTHORS  CHANGELOG.md  CMakeLists.txt  README.md  library.json
.github/workflows/: codeql-buildscript.sh
dev/: lwprintf_dev.vcxproj  lwprintf_dev.vcxproj.filters  lwprintf_opts.h  main.c
dev/VisualStudio/: lwprintf_config.h  lwprintf_dev.vcxproj  lwprintf_dev.vcxproj.filters  lwprintf_opts.h  main.c
docs/: conf.py  index.rst
docs/api-reference/: index.rst  lwprintf_config.rst  lwprintf_opt.rst
docs/examples_src/: example_minimal.c
docs/get-started/: index.rst
docs/test-results/: index.rst
docs/user-manual/: format-specifier.rst  how-it-works.rst  index.rst  instances.rst  thread-safety.rst
examples/: additional_format_specifiers.c
examples/stm32/lwprintf_stm32l432kc_nucleo/: .cproject  .project  CMakeLists.txt
examples/stm32/lwprintf_stm32l432kc_nucleo/Core/Inc/: lwprintf_opts.h  stm32l4xx_hal_conf.h
examples/stm32/lwprintf_stm32l432kc_nucleo/Core/Src/: main.c  stm32l4xx_hal_msp.c
lwprintf/: CMakeLists.txt  library.cmake
lwprintf/src/include/lwprintf/: lwprintf.h  lwprintf_config_default.h  lwprintf_config_template.h  lwprintf_opt.h  lwprintf_opts_template.h
lwprintf/src/include/system/: lwprintf_sys.h
lwprintf/src/lwprintf/: lwprintf.c
lwprintf/src/system/: lwprintf_sys_cmsis_os.c  lwprintf_sys_template.c  lwprintf_sys_threadx.c  lwprintf_sys_win32.c
tests/: test_results.test
